--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-02-feedback_not-building",
+  "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://iakivpekarskyi.github.io/goit-react-hw-02-feedback_not-building/",
